--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "abappy",
   "license": "ISC",
   "dependencies": {
+    "formik": "^2.2.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
