--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "bricks.js": "^1.8.0",
     "formik": "^2.2.6",
+    "masonry-layout": "^4.2.2",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
-    "uniqid": "^5.3.0"
+    "uniqid": "^5.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
