--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "uniqid": "^5.3.0",
     "uuid": "^8.3.2"
