--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "bricks.js": "^1.8.0",
     "formik": "^2.2.6",
     "masonry-layout": "^4.2.2",
+    "prop-types": "^15.7.2",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.0",
     "uniqid": "^5.3.0",
     "uuid": "^8.3.2"
   },
