--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "axios": "^0.21.1",
     "bricks.js": "^1.8.0",
     "formik": "^2.2.6",
     "masonry-layout": "^4.2.2",
@@ -23,6 +24,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "uniqid": "^5.3.0",
     "uuid": "^8.3.2"
@@ -35,6 +38,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^5.3.1",
+    "redux-logger": "^3.0.6",
     "style-loader": "^2.0.0",
     "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0",
