--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-    "presets": ["@babel/env", "@babel/react"]
+    "presets": ["@babel/env", "@babel/react"],
+    // "plugins": ["@babel/syntax-dynamic-import"],
+    "env": {
+        "test": {
+            "plugins": ["@babel/syntax-dynamic-import"]
+        }
+    }
 }
