--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "build": "webpack",
     "start": "webpack serve --open"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  },
   "author": "abappy",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +21,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
+    "babel-jest": "^27.0.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "bricks.js": "^1.8.0",
     "formik": "^2.2.6",
     "masonry-layout": "^4.2.2",
